# ai-ring-chat

./: .gitignore  Makefile  README.md  pyproject.toml
src/ai_ring_chat/: __init__.py  main.py
src/ai_ring_chat/control/: controller.py  network.py  protocol.py
src/ai_ring_chat/model/: message.py  messages.py  nodes.py  protocol.py
src/ai_ring_chat/view/: __init__.py  views.py
tests/: test_controller.py  test_main.py  test_main_integration.py  test_message.py  test_messages.py  test_network.py  test_nodes.py  test_protocol.py  test_view.py
